Stop logo repositioning on small screens in the editor

--- a/maywood/style-editor.css
+++ b/maywood/style-editor.css
@@ -1202,6 +1202,10 @@ b, strong {
 	color: inherit;
 }
 
+.fse-template .block-editor-block-list__layout .block-editor-block-list__block[data-align=full] > .block-editor-block-list__block-edit figure.fse-site-logo {
+	width: auto;
+}
+
 .fse-template .main-navigation {
 	color: #181818;
 }
