--- a/maywood/style-rtl.css
+++ b/maywood/style-rtl.css
@@ -4124,3 +4124,8 @@ p:not(.site-title) a:hover {
 .fse-template .wp-block-cover-image .site-title a {
 	text-decoration: none;
 }
+
+.fse-template .wp-block-cover .has-background,
+.fse-template .wp-block-cover-image .has-background {
+	text-shadow: none;
+}
