--- a/varia/sass/full-site-editing/_editor.scss
+++ b/varia/sass/full-site-editing/_editor.scss
@@ -27,6 +27,10 @@
 		}
 	}
 
+	.block-editor-block-list__layout .block-editor-block-list__block[data-align=full] > .block-editor-block-list__block-edit figure.fse-site-logo {
+		width: auto;
+	}
+
 	@import '../components/header/site-main-navigation';
 
 	.main-navigation {
